Simple login page with HTML and CSS

--- a/secao_HTML/SemanticInTheHTML5Framework.html
+++ b/secao_HTML/SemanticInTheHTML5Framework.html
@@ -8,7 +8,7 @@
 
     <style>
         #Home{
-            color: aqua;
+            color: rgb(255, 0, 200);
         }
     </style>
 
@@ -24,5 +24,17 @@
             </p>
                 
         </header>
+        <section>
+            <header>
+                <h2>ROUPAS FEMININAS</h2>
+            </header>
+
+            <article>
+                <h3>Heading 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel iusto nisi sed omnis quidem error! 
+                        Ipsum sunt dolore aliquam harum totam reprehenderit adipisci ea nam, incidunt, ullam nobis ad corrupti.
+                    </p>
+            </article>
+        </section>
     </body>
 </html>
